--- a/core/pom.xml
+++ b/core/pom.xml
@@ -51,6 +51,11 @@ limitations under the License.
         </dependency>
         <dependency>
             <groupId>io.opentelemetry</groupId>
+            <artifactId>opentelemetry-sdk-trace</artifactId>
+            <version>${io.opentelemetry.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.opentelemetry</groupId>
             <artifactId>opentelemetry-exporter-logging</artifactId>
             <version>${io.opentelemetry.version}</version>
         </dependency>
@@ -58,6 +63,11 @@ limitations under the License.
             <groupId>io.opentelemetry</groupId>
             <artifactId>opentelemetry-sdk-metrics</artifactId>
             <version>${io.opentelemetry.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.cloud.opentelemetry</groupId>
+            <artifactId>exporter-metrics</artifactId>
+            <version>${com.google.cloud.opentelemetry.version}</version>
         </dependency>
         <dependency>
             <groupId>com.google.cloud.opentelemetry</groupId>
