feat: Add core telemetry structure and classes.

--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@ limitations under the License.
     <modules>
         <module>core</module>
         <module>client</module>
+        <module>common</module>
         <module>coverage</module>
         <module>test-lib</module>
     </modules>
