--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,7 @@ limitations under the License.
         <apache.parquet.version>1.16.0</apache.parquet.version>
         <apache.avro.version>1.12.1</apache.avro.version>
         <apache.hadoop.version>3.4.2</apache.hadoop.version>
+        <slf4j.version>1.7.36</slf4j.version>
     </properties>
 
     <profiles>
@@ -381,8 +382,13 @@ limitations under the License.
 
             <dependency>
                 <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>${slf4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-log4j12</artifactId>
-                <version>1.7.36</version>
+                <version>${slf4j.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.parquet</groupId>
